TL/CUDA: fix build and refactor kernel

--- a/src/components/tl/cuda/Makefile.am
+++ b/src/components/tl/cuda/Makefile.am
@@ -53,7 +53,7 @@ allreduce =                    \
 if TL_CUDA_NVLS_ENABLED
 reduce_scatter += reduce_scatter/reduce_scatter_nvls.c
 
-allreduce += llreduce/allreduce_nvls.c
+allreduce += allreduce/allreduce_nvls.c
 endif
 
 sources =               \
