TL/CUDA: NVLS gpu barrier

--- a/src/components/tl/cuda/kernels/Makefile.am
+++ b/src/components/tl/cuda/kernels/Makefile.am
@@ -24,9 +24,13 @@ comp_noinst = libucc_tl_cuda_kernels.la
 if TL_CUDA_NVLS_ENABLED
 libucc_tl_cuda_kernels_la_SOURCES  = reduce_scatter_kernel.cu allreduce_kernel.cu
 else
-libucc_tl_cuda_kernels_la_SOURCES  = 
+libucc_tl_cuda_kernels_la_SOURCES  =
 endif
 
 libucc_tl_cuda_kernels_la_CPPFLAGS =
 
 noinst_LTLIBRARIES = $(comp_noinst)
+
+# Ensure kernels rebuild when helper header changes
+reduce_scatter_kernel.lo: nvls.cuh
+allreduce_kernel.lo: nvls.cuh
