ci: add timeout to ucc tests
ucc tests can hang sometimes, we want to have timeout to avoid holding
the ci.

Issue: HPCINFRA-3979
Signed-off-by: Daniel Pressler <danielpr@nvidia.com>

--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -85,7 +85,7 @@ steps:
     run: |
       echo "INFO: Run UCC tests"
       hostname
-      docker exec $(cat /tmp/ucc_docker-"${BUILD_TAG}".id) bash -c "\${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh"
+      timeout -k 20 90m docker exec $(cat /tmp/ucc_docker-"${BUILD_TAG}".id) bash -c "\${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh"
     always: |
       docker rm --force $(cat /tmp/ucc_docker-"${BUILD_TAG}".id)
   #============================================================================
