--- a/.github/workflows/codestyle.yaml
+++ b/.github/workflows/codestyle.yaml
@@ -2,23 +2,38 @@ name: Codestyle
 
 on: [pull_request]
 
+# Cancel in-progress runs for the same PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   GIT_CF: https://raw.githubusercontent.com/llvm/llvm-project/release/21.x/clang/tools/clang-format/git-clang-format
+  LLVM_VERSION: 21
+
 jobs:
   check-codestyle:
     runs-on: ubuntu-22.04
     name: Check code style
+    defaults:
+      run:
+        shell: bash
     steps:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends wget lsb-core software-properties-common
-        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key| sudo apt-key add -
-        sudo apt-add-repository 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-21 main'
-        sudo apt-get install -y --no-install-recommends clang-format-21
-        curl -OL $GIT_CF && chmod +x ./git-clang-format && sudo mv ./git-clang-format /usr/bin/git-clang-format
+        sudo apt-get install -y --no-install-recommends wget lsb-release software-properties-common gnupg
+        wget -qO- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/llvm.asc
+        sudo add-apt-repository -y "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-${LLVM_VERSION} main"
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends clang-format-${LLVM_VERSION}
+
+        # Install git-clang-format (no version suffix)
+        curl -fsSL $GIT_CF -o git-clang-format
+        chmod +x ./git-clang-format
+        sudo mv ./git-clang-format /usr/bin/git-clang-format
     - name: Checking out repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 0
@@ -69,13 +84,18 @@ jobs:
         fi
     - name: Check code format
       run: |
-        set -eE
+        set -eEuo pipefail
         echo "Commit ${{ github.event.pull_request.base.sha }}"
-        diff=`git clang-format --binary=clang-format-21 --style=file --diff ${{ github.event.pull_request.base.sha }}`
+        diff=`git-clang-format --binary=clang-format-${LLVM_VERSION} --style=file --diff ${{ github.event.pull_request.base.sha }}` || true
         if [ "$diff" = "no modified files to format" ] || [ "$diff" = "clang-format did not modify any files" ]
         then
           echo "Format check PASS"
         else
-          echo "Please check code format:"
+          echo "Format check FAILED"
+          echo ""
+          echo "Please format your code using:"
+          echo "  git-clang-format --binary=clang-format-${LLVM_VERSION} ${{ github.event.pull_request.base.sha }}"
+          echo ""
+          echo "Formatting differences:"
           echo "$diff"
         fi
